handle width below 1080 px and alignment fix

--- a/app/routes/trade/symbol/symbolinfo.module.css
+++ b/app/routes/trade/symbol/symbolinfo.module.css
@@ -48,3 +48,12 @@
     }
 }
 
+
+
+
+@media only screen and (max-width: 1080px) {    
+    .symbolInfoLimitor, .symbolInfoLimitorNarrow {
+        max-width: calc(100vw - var(--main-gap) * 4 - 9rem );
+    }
+
+}
