--- a/app/routes/trade/watchlist/watchlist.module.css
+++ b/app/routes/trade/watchlist/watchlist.module.css
@@ -48,23 +48,29 @@
 
 .watchListLimitor{
     max-width: calc(100vw - var(--order-book-width-desktop-small) 
-    - var(--trade-module-width-desktop-small) - var(--main-gap) * 4 - 10rem );
+    - var(--trade-module-width-desktop-small) - var(--main-gap) * 4 - 9.2rem );
 }
 
 .watchListLimitorNarrow{
     max-width: calc(100vw - var(--order-book-width-desktop-small) * 3 
-    - var(--trade-module-width-desktop-small) - var(--main-gap) * 4 - 10rem );
+    - var(--trade-module-width-desktop-small) - var(--main-gap) * 4 - 9.2rem );
 }
 
 @media only screen and (min-width: 1920px) {
     .watchListLimitor {
         max-width: calc(100vw - var(--order-book-width-desktop-large) 
-        - var(--trade-module-width-desktop-large) - var(--main-gap) * 4 - 10rem );
+        - var(--trade-module-width-desktop-large) - var(--main-gap) * 4 - 9.2rem );
     }
 
     .watchListLimitorNarrow {
-        max-width: calc(100vw - var(--order-book-width-desktop-large) * 3
-        - var(--trade-module-width-desktop-large) - var(--main-gap) * 4 - 10rem );
+        max-width: calc(100vw - var(--order-book-width-desktop-large) * 3   
+        - var(--trade-module-width-desktop-large) - var(--main-gap) * 4 - 9.2rem );
     }
 }
 
+
+@media only screen and (max-width: 1080px) {
+    .watchListLimitor, .watchListLimitorNarrow {
+        max-width: calc(100vw - var(--main-gap) * 4 - 8.2rem );
+    }
+}
